<resources>
    <string name="app_name">Horace</string>
    <string name="facebook_app_id" translatable="false">646330164039157</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb646330164039157</string>
    <string name="facebook_client_token" translatable="false">2ee33b5cc97c2118b2e6e280de79a431</string>
    <string name="preference_auth">auth</string>
    <string name="preference_theme">theme</string>
    <string name="preference_quick_actions">quick_actions</string>
    <string name="preference_edit">edit</string>
    <string name="preference_sign_out">sign_out</string>
    <string name="preference_mode">mode</string>
    <string name="preference_volume_on">volume_on</string>
    <string name="preference_share">share</string>
    <string name="preference_activity_id">activity_id</string>
    <string name="preference_select_activity_sort_ascending">select_activity_ascending</string>
    <string name="preference_workgroup_sort_ascending">workgroup_ascending</string>
    <string name="preference_invite_friends_sort_ascending">invite_friends_ascending</string>
    <string name="preference_journal_sort_most_recent">journal_most_recent</string>
    <string name="preference_friends_sort_ascending">friends_ascending</string>
    <string name="setting_authenticate">Authenticate</string>
    <string name="setting_share_profile">Share profile</string>
    <string name="setting_update_profile">Update profile</string>
    <string name="setting_select_theme">Select theme</string>
    <string name="setting_show_quick_actions">Show quick actions</string>
    <string name="setting_sign_out">Sign out</string>
    <string-array name="theme_names">
        <item>Follow device theme</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="theme_device">device</string>
    <string name="theme_light">light</string>
    <string name="theme_dark">dark</string>
    <string-array name="theme_values">
        <item>@string/theme_device</item>
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>
    <string name="destination_work_group">Work group</string>
    <string name="destination_activities">Activities</string>
    <string name="destination_leaderboard">Leaderboard</string>
    <string name="destination_home">Home</string>
    <string name="destination_journal">Journal</string>
    <string name="destination_friends">Friends</string>
    <string name="destination_user_details">User details</string>
    <string name="destination_select_activity">Select activity</string>
    <string name="destination_invite_friends">Invite friends</string>
    <string name="destination_sign_in">Sign in</string>
    <string name="destination_authentication">Authentication</string>
    <string name="destination_settings">Settings</string>
    <string name="destination_sign_up">Sign up</string>
    <string name="destination_reset_password">Reset password</string>
    <string name="destination_update_profile">Update profile</string>
    <string name="destination_notifications">Notifications</string>
    <string name="destination_confirm_delete">Confirm delete</string>
    <string name="destination_manual_log">Manual log</string>
    <string name="destination_new_activity">Add new activity</string>
    <string name="destination_new_area">Add new area</string>
    <string name="destination_sort_select_activity">Sort select activity</string>
    <string name="destination_sort_workgroup">Sort workgroup</string>
    <string name="destination_sort_invite_friends">Sort invite friends</string>
    <string name="destination_sort_journal">Sort journal</string>
    <string name="destination_sort_friends">Sort friends</string>
    <string name="destination_edit_entry">Edit entry</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_description">Navigate to settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_notifications_description">Navigate to notifications</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_description">Sort items</string>
    <string name="menu_home">Home</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="fragment_home_pomodoro">Pomodoro</string>
    <string name="fragment_home_stopwatch">Stopwatch</string>
    <string name="fragment_home_select_activity">Select activity</string>
    <string name="fragment_home_toggle_volume">Toggle volume</string>
    <string name="fragment_home_tap_to_start">Tap to start</string>
    <string name="fragment_home_work_group">Work group</string>
    <string name="fragment_home_migrate_title">Sync local journal</string>
    <string name="fragment_home_migrate_description">Would you like to move your local journal to the cloud?</string>
    <string name="fragment_home_migrate_decline">No, thanks</string>
    <string name="fragment_home_migrate_accept">Yes</string>
    <string name="fragment_home_time_zero">00:00:00</string>
    <string name="fragment_home_tap_to_stop">Tap to stop</string>
    <string name="fragment_home_time_entry_saved">New time entry saved</string>
    <string name="fragment_manual_log_activity">Activity</string>
    <string name="fragment_manual_log_new_activity">New activity</string>
    <string name="fragment_manual_log_date">Date</string>
    <string name="fragment_manual_log_start_time">Start time</string>
    <string name="fragment_manual_log_end_time">End time</string>
    <string name="fragment_manual_log_description">Description (optional)</string>
    <string name="fragment_manual_log_save">Save</string>
    <string name="fragment_manual_log_warning">Manual logs won\'t give you any points and won\'t count towards your streak.</string>
    <string name="dialog_work_group_title">Your work group</string>
    <string name="dialog_work_group_description">Earn more points by doing activities with your friends.</string>
    <string name="dialog_work_group_invite_friends">Invite friends to your work group</string>
    <string name="dialog_work_group_no_work_group">You\'re not in a work group.</string>
    <string name="dialog_sort_workgroup_title">Sort workgroup by</string>
    <string name="dialog_sort_workgroup_radio_ascending">Username ascending</string>
    <string name="dialog_sort_workgroup_radio_descending">Username descending</string>
    <string name="dialog_select_activity_title">Select activity</string>
    <string name="dialog_select_activity_add_new">Add new activity</string>
    <string name="dialog_select_activity_no_activities">No activities found.</string>
    <string name="dialog_select_activity_sort">Sort</string>
    <string name="dialog_select_activity_delete_activity_title">Delete activity</string>
    <string name="dialog_select_activity_delete_activity_description">This will delete the entries associated with this activity.</string>
    <string name="dialog_select_activity_delete_activity_delete">Yes, delete</string>
    <string name="dialog_select_activity_cancel">Cancel</string>
    <string name="dialog_sort_select_activity_radio_ascending">Name ascending</string>
    <string name="dialog_sort_select_activity_radio_descending">Name descending</string>
    <string name="dialog_sort_select_activity_title">Sort activities by</string>
    <string name="dialog_invite_friends_title">Invite friends</string>
    <string name="dialog_invite_friends_invite_selected">Invite selected friends to work group</string>
    <string name="dialog_invite_friends_no_friends">You don\'t have any friends :(</string>
    <string name="dialog_invite_friends_share_profile">Tap to share your profile</string>
    <string name="dialog_sort_invite_friends_title">Sort friends by</string>
    <string name="dialog_sort_invite_friends_radio_ascending">Username ascending</string>
    <string name="dialog_sort_invite_friends_radio_descending">Username descending</string>
    <string name="dialog_auth_title">Authenticate</string>
    <string name="dialog_auth_description">Sign in to your account or create a new one to work with friends and sync your data to your other devices.</string>
    <string name="dialog_auth_continue_with">Continue with</string>
    <string name="dialog_auth_email_and_password">Email and password</string>
    <string name="dialog_auth_google">Google</string>
    <string name="dialog_auth_facebook">Facebook</string>
    <string name="fragment_sign_in_email">Email</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_sign_in">Sign in</string>
    <string name="fragment_sign_in_sign_up">Sign up</string>
    <string name="fragment_sign_in_forgot_password">Forgot your password?</string>
    <string name="fragment_sign_up_username">Username</string>
    <string name="fragment_sign_up_email">Email</string>
    <string name="fragment_sign_up_password">Password</string>
    <string name="fragment_sign_up_password_confirm">Confirm password</string>
    <string name="fragment_sign_up_sign_up">Sign up</string>
    <string name="fragment_sign_up_terms">I accept the terms and conditions</string>
    <string name="dialog_confirm_delete_title">Confirm delete</string>
    <string name="dialog_confirm_delete_description">Are you sure you want to delete your profile? This action cannot be undone.</string>
    <string name="dialog_confirm_delete_yes">Yes, delete my profile</string>
    <string name="fragment_new_activity_name">Activity name</string>
    <string name="fragment_new_activity_new_area">New area</string>
    <string name="fragment_new_activity_area">Area (Optional)</string>
    <string name="fragment_new_activity_save">Save</string>
    <string name="fragment_new_area_area_name">Area name</string>
    <string name="fragment_new_area_save">Save</string>
    <string name="dialog_sort_journal_title">Sort journal by</string>
    <string name="dialog_sort_journal_radio_most_recent">Most recent date</string>
    <string name="dialog_sort_journal_radio_least_recent">Least recent date</string>
    <string name="dialog_sort_friends_title">Sort friends by</string>
    <string name="dialog_sort_friends_radio_ascending">Username ascending</string>
    <string name="dialog_sort_friends_radio_descending">Username descending</string>
    <string name="dialog_entry_options_title">Entry options</string>
    <string name="dialog_entry_options_edit">Edit entry</string>
    <string name="dialog_entry_options_delete">Delete entry</string>
    <string name="dialog_entry_options_deleted">Entry deleted</string>
    <string name="fragment_edit_entry_activity">Activity</string>
    <string name="fragment_edit_entry_new_activity">New activity</string>
    <string name="fragment_edit_entry_date">Date</string>
    <string name="fragment_edit_entry_start_time">Start time</string>
    <string name="fragment_edit_entry_end_time">End time</string>
    <string name="fragment_edit_entry_description">Description (optional)</string>
    <string name="fragment_edit_entry_save">Save</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="password_min_length">Password must have at least 8 characters</string>
    <string name="password_uppercase">Password must contain at least 1 uppercase character</string>
    <string name="profile_photo">Profile photo</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_changes">Save changes</string>
    <string name="remove_friend">Remove friend</string>
    <string name="delete_profile">Delete profile</string>
    <string name="request_friendship">Request friendship</string>
    <string name="send_request">Send request</string>
</resources>