<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.UserDetailsDialog">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="?attr/colorPrimaryContainer"
        app:cardCornerRadius="80dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/imageview_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_photo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_default_profile_photo" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textview_username"
        style="?attr/textAppearanceTitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/textview_email"
        style="?attr/textAppearanceBodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email" />

    <Button
        android:id="@+id/button_request_friendship"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:text="@string/request_friendship" />

</LinearLayout>
