<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.settings.updateprofile.ConfirmDeleteDialog">

    <TextView
        style="?attr/textAppearanceTitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_confirm_delete_title" />

    <TextView
        style="?attr/textAppearanceBodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/dialog_confirm_delete_description" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/dialog_confirm_delete_yes"
        android:textColor="?attr/colorOnError" />

</LinearLayout>
